@@ -4,6 +4,7 @@ Fixed bug  254: False+ : UnusedImport with Javadoc @throws
 Fixed bug 1080: net.sourceforge.pmd.cpd.CPDTest test failing
 Fixed bug 1081: Regression: CPD skipping all files when using relative paths
 Fixed bug 1082: CPD performance issue on larger projects
+Fixed bug 1086: Unsupported Element and Attribute in Ant Task Example
 
 
 April 5, 2013 - 5.0.3:
